2nd attempt at fixing outofmemory errors